# kiterpg

./: Cargo.toml  README.md
src/: assets.rs  main.rs  states.rs
src/plugins/: mod.rs
src/plugins/animation/: mod.rs  systems.rs
src/plugins/atlas/: mod.rs  resources.rs  systems.rs
src/plugins/camera/: bundles.rs  mod.rs  systems.rs
src/plugins/combat/: components.rs  mod.rs  states.rs  systems.rs
src/plugins/debug/: mod.rs
src/plugins/enemy/: bundles.rs  components.rs  mod.rs
src/plugins/fade/: components.rs  mod.rs  states.rs  systems.rs
src/plugins/fight/: components.rs  mod.rs  systems.rs
src/plugins/game/: mod.rs  systems.rs
src/plugins/gameui/: mod.rs
src/plugins/intro/: mod.rs
src/plugins/overworld/: mod.rs  resources.rs  states.rs  systems.rs
src/plugins/player/: bundles.rs  components.rs  mod.rs  states.rs
src/plugins/player/systems/: animation.rs  fight.rs  mod.rs  movement.rs  position.rs
src/plugins/spawner/: bundles.rs  mod.rs
src/plugins/spawner/systems/: mod.rs  spawn.rs
src/plugins/tilemap/: mod.rs
src/plugins/tilemap/systems/: colliders.rs  tiles.rs
